# Unity-Control-Center

./: configure.ac
panels/: Makefile.am
panels/appearance/: Makefile.am  appearance.ui  bg-pictures-source.c  bg-pictures-source.h  cc-appearance-item.c  cc-appearance-panel.c  unity-appearance-panel.desktop.in.in
panels/background/: Makefile.am  bg-colors-source.c  bg-pictures-source.c  cc-background-panel.c  unity-background-panel.desktop.in.in
panels/bluetooth/: Makefile.am  bluetooth.ui  cc-bluetooth-panel.c  unity-bluetooth-panel.desktop.in.in
panels/bluetooth/gnome-bluetooth/lib/: bluetooth-client.c
panels/bluetooth/gnome-bluetooth/wizard/: Makefile.am
panels/color/: Makefile.am  cc-color-panel.c  unity-color-panel.desktop.in.in
panels/datetime/: Makefile.am  cc-datetime-panel.c  datetime-prefs-locations.c  datetime-prefs.c  unity-datetime-panel.desktop.in.in
panels/display/: Makefile.am  cc-display-panel.c  cc-rr-labeler.h  display-capplet.ui  display-cfg-parser.c  display-cfg-parser.h  unity-display-panel.desktop.in.in
panels/info/: Makefile.am  cc-info-panel.c  info.ui  logo-generator.vala  unity-info-panel.desktop.in.in
panels/keyboard/: Makefile.am  gnome-keyboard-panel.ui  keyboard-shortcuts.c  unity-keyboard-panel.desktop.in.in
panels/mouse/: Makefile.am  gnome-mouse-properties.c  unity-mouse-panel.desktop.in.in
panels/network/: Makefile.am  net-device-wifi.c  net-device-wired.c  unity-network-panel.desktop.in.in
panels/online-accounts/: Makefile.am  cc-online-accounts-panel.c  online-accounts.ui  unity-online-accounts-panel.desktop.in.in
panels/online-accounts/icons/16x16/: Makefile.am
panels/online-accounts/icons/22x22/: Makefile.am
panels/online-accounts/icons/24x24/: Makefile.am
panels/online-accounts/icons/256x256/: Makefile.am
panels/online-accounts/icons/32x32/: Makefile.am
panels/online-accounts/icons/48x48/: Makefile.am
panels/power/: Makefile.am  cc-power-panel.c  power.ui  unity-power-panel.desktop.in.in
panels/power/icons/16x16/: Makefile.am
panels/power/icons/22x22/: Makefile.am
panels/power/icons/24x24/: Makefile.am
panels/power/icons/256x256/: Makefile.am
panels/power/icons/32x32/: Makefile.am
panels/power/icons/48x48/: Makefile.am
panels/printers/: Makefile.am  pp-ppd-option-widget.c  unity-printers-panel.desktop.in.in
panels/region/: Makefile.am  cc-region-panel.c  fcitx.c  fcitx.h  gnome-region-panel-input.c  gnome-region-panel.ui  keyboard-shortcuts.c  unity-region-panel-fcitx.ui  unity-region-panel-ibus.ui  unity-region-panel.desktop.in.in  unity-region-panel.ui  unity-region-panel2.desktop.in.in
panels/screen/: Makefile.am  cc-screen-panel.c  screen.ui  unity-screen-panel.desktop.in.in
panels/screen-sharing/: Makefile.am  cc-screen-sharing-panel.c  cc-screen-sharing-panel.h  screen-sharing-module.c  screen-sharing-panel.ui  unity-screen-sharing-panel.desktop.in.in
panels/sharing/: Makefile.am  cc-sharing-panel.c  cc-sharing-panel.h  cc-sharing-resources.c  com.canonical.controlcenter.remote-login-helper.policy.in.in  org.gnome.SettingsDaemon.Sharing.c  org.gnome.SettingsDaemon.Sharing.h  sharing-module.c  sharing.ui  unity-sharing-panel.desktop.in.in
panels/sound/: cc-sound-panel.c  gvc-balance-bar.c  gvc-channel-bar.c  gvc-combo-box.c  gvc-mixer-control.c  gvc-mixer-dialog.c
panels/sound-nua/: cc-sound-panel.c  gvc-mixer-dialog.c
panels/sound-nua/data/: Makefile.am  unity-sound-panel.desktop.in.in
panels/sound/data/: Makefile.am  unity-sound-panel.desktop.in.in
panels/sound/data/icons/16x16/apps/: Makefile.am
panels/sound/data/icons/22x22/apps/: Makefile.am
panels/sound/data/icons/32x32/apps/: Makefile.am
panels/sound/data/icons/scalable/apps/: Makefile.am
panels/universal-access/: Makefile.am  cc-ua-panel.c  unity-universal-access-panel.desktop.in.in
panels/user-accounts/: Makefile.am  um-account-dialog.c  um-fingerprint-dialog.c  um-history-dialog.c  um-password-dialog.c  um-photo-dialog.c  um-user-panel.c  um-utils.c
panels/user-accounts/data/: Makefile.am  password-dialog.ui  unity-user-accounts-panel.desktop.in.in  user-accounts-dialog.ui
panels/wacom/: Makefile.am  cc-wacom-mapping-panel.c  cc-wacom-page.c  gsd-wacom-device.c  unity-wacom-panel.desktop.in.in
panels/wacom/calibrator/: Makefile.am
po/: LINGUAS  (+124 more)
(+18 files in other folders)
